@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.11301 2012/06/16 21:08:06 dholland Exp $
+$NetBSD: TODO,v 1.11303 2012/06/19 08:51:33 wiz Exp $
 
 Suggested new packages
 ======================
@@ -331,7 +331,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o DatUtil-2.45
 	o GMT-4.2.1
 	o GUIlib-1.1.2
-	o ImageMagick-6.7.7.6
+	o ImageMagick-6.7.7.7
 	o MAMEDiff-2.30
 	o Mesa-7.11.1
 	o MesaLib-7.11
@@ -382,9 +382,10 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o ap-jk-1.2.28
 	o ap-layout-3.4
 	o ap-mp3-0.40
+	o ap-php-5.4.4
 	o ap-xslt-1.4.0
 	o ap2-auth-ldap-3.11
-	o ap2-perl-2.0.6
+	o ap2-perl-2.0.7
 	o ap2-transform-0.6.0
 	o apache-maven-3.0
 	o apr0-2.4.1
@@ -407,7 +408,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o audacious-plugins-2.4.4
 	o audacity-2.0
 	o autoconvert-0.3.16
-	o autogen-5.16
+	o autogen-5.16.1
 	o avcheck-0.91
 	o avidemux-2.5.6
 	o avl-2.0.2a
@@ -444,7 +445,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o cairo-gobject-1.12.2
 	o cal3d-0.11.0
 	o calamaris-2.59
-	o calibre-0.8.55
+	o calibre-0.8.56
 	o calligra-2.4.2 [koffice successor]
 	o cardboard-schedule-1.14c [at http://www.bright-green.com/downloads/]
 	o catdoc-0.94.3
@@ -466,7 +467,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o cinepaint-1.0
 	o cint-5.16
 	o cjk-lyx-1.4.4
-	o clamav-0.97.4
+	o clamav-0.97.5
 	o classpath-0.98
 	o clustalw-2.0.12 [pkg/43395]
 	o clutter-1.10.4
@@ -500,12 +501,14 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o darcs-2.4
 	o dasher-4.11
 	o dasm-2.20.11
+	o davical-1.1.0
 	o dbench-4.0
 	o dbus-1.6.0
 	o dbus-glib-0.98 [wants dbus>1.2.16]
 	o dcc-1.3.141
 	o dconf-0.7.1
 	o ddclient-3.7.3
+	o ddrescue-1.16
 	o defendguin-0.0.11
 	o dejagnu-1.5
 	o delegate-9.9.7
@@ -554,8 +557,8 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o epic4-2.6
 	o epiphany-extensions-3.2.0
 	o epstool-3.08
-	o eric4-4.5.3
-	o eric5-5.2.2
+	o eric4-4.5.4
+	o eric5-5.2.3
 	o erlang-15b01
 	o esh-0.8.5
 	o espeak-1.40
@@ -630,7 +633,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o gdm-2.32.2 [GNOME 2.32]
 	o gdm-3.0.3
 	o gdsreader-0.3.2
-	o geany-0.21
+	o geany-1.22
 	o gedit-3.2.6
 	o gedit-plugins-2.32.0 [GNOME 2.32]
 	o gentoo-0.19.13
@@ -720,7 +723,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o gwaei-3.4.3
 	o gworkspace-0.9.1
 	o gxine-0.5.907
-	o gzip-1.4
+	o gzip-1.5
 	o hackbot-2.21
 	o hamster-applet-2.32.1 [GNOME 2.32]
 	o hanzim-3.4
@@ -817,7 +820,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o libextractor-0.6.3
 	o libffi-3.0.11
 	o libflash-0.4.13
-	o libfolks-0.7.0
+	o libfolks-0.7.1
 	o libgail-gnome-1.20.4
 	o libgda-4.2.1 [GNOME 2.32]
 	o libgda-4.2.5
@@ -858,7 +861,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o libvirt-0.9.9
 	o libxklavier-5.2.1
 	o licq-1.3.8
-	o liferea-1.8.5
+	o liferea-1.8.6
 	o lighttpd-1.4.31
 	o lincvs-2.1.4 [now called CrossVC]
 	o links-2.7pre1
@@ -867,7 +870,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o lmms-0.4.5
 	o lottanzb-0.5.3
 	o lq-sp-1.3.4.13
-	o lua-5.2.0
+	o lua-5.2.1
 	o lwm-1.2.2
 	o lyx-2.0.3
 	o maelstrom-sdl-3.0.6
@@ -894,6 +897,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o mknmz-wwwoffle-0.7.2
 	o mksh-40f
 	o mkvtoolnix-5.6.0
+	o mnemosyne-2.0
 	o moc-2.4.4
 	o modular-xorg-server-1.11.2 [wip]
 	o modular-xorg-server-1.12.2
@@ -954,6 +958,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o open-vm-tools-2010.09.19.301124
 	o openafs-1.7.2
 	o opendkim-2.6.0
+	o opendnssec-1.3.9
 	o opengrok-0.11.1
 	o openh323-1.19.1
 	o openldap-client-2.4.31
@@ -972,7 +977,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o p0f-3.00b
 	o p5-App-cpanminus-1.5013 [pkg/46549]
 	o p5-Gtk2-1.223
-	o p5-PerlMagick-6.7.7.6
+	o p5-PerlMagick-6.7.7.7
 	o p5-Search-Xapian-1.2.10.0
 	o p5-cairo-1.082
 	o p5-glib2-1.260
@@ -1017,7 +1022,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o polkit-qt-0.103.0
 	o polsms-2.1.0
 	o poppass-4.0.14
-	o poppler-0.20.0
+	o poppler-0.20.1
 	o poppy-4.01
 	o postgresql83-8.3.19 [CVE-2012-2143, CVE-2012-2655]
 	o postgresql84-8.4.12 [CVE-2012-2143, CVE-2012-2655]
@@ -1032,7 +1037,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o profit-2.5.3
 	o projclock-0.9
 	o proxsmtp-1.10
-	o psmisc-22.17
+	o psmisc-22.18
 	o ptlib-2.8.0 [pkg/42941]
 	o ptlib-2.8.3
 	o puf-1.0.0
@@ -1048,6 +1053,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o py-creole-1.0.4 [pkg/46593]
 	o py-dbus-1.1.0 [needs dbus>=1.4]
 	o py-docutils-0.9 [pkg/46573]
+	o py-docutils-0.9.1
 	o py-game-1.9.1 [needs portmidi]
 	o py-gnosis-1.2.2
 	o py-gnosis-utils-1.2.1
@@ -1125,6 +1131,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o singularity-0.30c
 	o sitescooper-3.1.2
 	o sjeng-11.2
+	o skype-4.0.0.7
 	o slock-1.0
 	o smproxy-1.0.3
 	o smtpfeed-1.20
@@ -1184,6 +1191,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o texmaker-3.1 [pkg/45521]
 	o texmaker-3.3.4
 	o tfmxplay-1.1.6
+	o tiff-4.0.2
 	o tig-1.0
 	o tightvnc-2.0.95
 	o tile-0.7.4
@@ -1258,6 +1266,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o windowlab-1.40
 	o windowmaker-0.95.2 [wip]
 	o wine-1.4 [wait until NetBSD gains OSS 4 or bring OSS 3 support back]
+	o wine-1.4.1
 	o wine-devel-1.5.6 [wait until NetBSD gains OSS 4 or bring OSS 3 support back]
 	o wmi-11
 	o wml-2.0.11
@@ -1265,7 +1274,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o wmweather-2.4.4
 	o wmx-7
 	o wordpress-3.4
-	o worker-2.19.2
+	o worker-2.19.3
 	o wpi-firmware-1.14.2
 	o wwwoffle-2.9h
 	o wxGTK28-2.8.12
